<resources>
    <string name="app_name">Crepes&amp;Waffles</string>
    <string name="correo">Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="aviso_crear">¿Aún no tienes cuenta? Crea una</string>
    <string name="usuario">Usuario</string>
    <string name="registro">REGISTRO</string>
    <string name="email">Correo Electrónico</string>
    <string name="comcontraseña">Confirme su contraseña</string>
    <string name="passmin">Mínimo 6 dígitos</string>
    <string name="samepass">Repita contraseña </string>
    <string name="loaduser">Ingrese el correo registrado</string>
    <string name="close_sesion">Cerrar Sesión</string>
</resources>
